# genemichaels

./: .bread.yml  Cargo.toml  Testing  abc  jfwowj  license.txt  mxy  readme.md  readme_aargvark.md  readme_genemichaels.md
.github/: pull_request_template.md
.github/workflows/: copyright.yaml  copyright.yml  rust.yml
crates/aargvark/: Cargo.toml  readme.md
crates/aargvark/crates/aargvark/: Cargo.toml
crates/aargvark/crates/aargvark/src/: base.rs
crates/aargvark/crates/aargvark_proc_macros/src/: lib.rs
crates/aargvark/crates/aargvark_tests/: Cargo.toml
crates/aargvark/src/: base.rs  help.rs  lib.rs  traits.rs  traits_impls.rs
crates/aargvark_proc_macros/: Cargo.toml  readme.md
crates/aargvark_proc_macros/src/: lib.rs
crates/aargvark_tests/: Cargo.toml
crates/aargvark_tests/examples/: ultrathon.rs
crates/aargvark_tests/tests/: test.rs
crates/genemichaels/: Cargo.toml  readme.md
crates/genemichaels-lib/: Cargo.toml  readme.md
crates/genemichaels-lib/src/: lib.rs  normalize_declarations.rs  normalize_imports.rs  sg_expr.rs  sg_general.rs  sg_general_lists.rs  sg_pat.rs  sg_root.rs  sg_statement.rs  sg_type.rs  whitespace.rs
crates/genemichaels-lib/tests/: comments.rs  oneway.rs  roundtrip.rs
crates/genemichaels/src/: main.rs
proc_macros/: Cargo.toml  mod.rs
src/: comments.rs  lib.rs  sg_expr.rs  sg_general.rs  sg_general_lists.rs  sg_pat.rs  sg_root.rs  sg_statement.rs  sg_type.rs  utils.rs  whitespace.rs
src/proc_macros/: Cargo.toml  mod.rs
tests/: comments.rs  oneway.rs  roundtrip.rs  test.rs
