[package]
name = "aargvark"
version = "0.4.2"
edition = "2021"
license = "ISC"
description = "Self-similar argument parsing"
homepage = "https://github.com/andrewbaxter/aargvark"
repository = "https://github.com/andrewbaxter/aargvark"
readme = "readme.md"

[workspace]
members = ["proc_macros"]

[features]
default = []
serde_json = ["dep:serde_json", "dep:serde"]
serde_yaml = ["dep:serde_yaml", "dep:serde"]
http_types = ["dep:http"]

[dependencies]
aargvark_proc_macros = { path = "proc_macros", version = "=2.0.0" }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0", optional = true }
convert_case = "0.6"
comfy-table = { version = "7", features = ["custom_styling"] }
url = { version = "2", optional = true }
http = { version = "1", optional = true }
serde = { version = "1", optional = true }
console = "0.15"
textwrap = { version = "0.16", features = ["terminal_size"] }
unicode-width = "0.1"
