[workspace]
resolver = "2"
members = ["crates/genemichaels", "crates/genemichaels-lib"]

[workspace.package]
edition = "2021"
license = "ISC"
repository = "https://github.com/andrewbaxter/genemichaels"
readme = "readme.md"

[workspace.dependencies]
syn = { version = "2", features = ["full"] }
loga = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
