[package]
name = "aargvark_proc_macros"
version = "0.1.0"
edition = "2021"
license = "ISC"
description = "Helper crate for aargvark"
homepage = "https://github.com/andrewbaxter/aargvark"
repository = "https://github.com/andrewbaxter/aargvark"
readme = "../readme.md"

[lib]
proc-macro = true
path = "mod.rs"

[dependencies]
convert_case = "0.6"
genemichaels = "0.3"
proc-macro2 = "1"
quote = "1"
syn = "2"
