[package]
name = "aargvark_proc_macros"
version = "3.0.0"
edition = "2021"
license = "ISC"
description = "Helper crate for aargvark"
homepage = "https://github.com/andrewbaxter/aargvark"
repository = "https://github.com/andrewbaxter/aargvark"
readme = "../readme.md"

[lib]
proc-macro = true
path = "mod.rs"

[dependencies]
convert_case = "0.6"
darling = "0.20.10"
genemichaels-lib = "0.5.0-pre2"
proc-macro2 = "1"
quote = "1"
syn = "2"
