[package]
name = "aargvark"
description = "Self-similar argument parsing"
version = "0.6.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = []
serde_json = ["dep:serde_json", "dep:serde"]
serde_yaml = ["dep:serde_yaml", "dep:serde"]
http_types = ["dep:http"]

[dependencies]
aargvark_proc_macros = { path = "../aargvark_proc_macros", version = "=3.2.0" }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0", optional = true }
convert_case = "0.6"
comfy-table = { version = "7", features = ["custom_styling"] }
url = { version = "2", optional = true }
http = { version = "1", optional = true }
serde = { version = "1", optional = true }
console = "0.15"
textwrap = { version = "0.16", features = ["terminal_size"] }
unicode-width = "0.1"
