[package]
name = "aargvark"
description = "Self-similar argument parsing"
version = "0.8.1"
edition.workspace = true
license.workspace = true
repository = "https://github.com/andrewbaxter/genemichaels"
readme = "./readme.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
serde_json = ["dep:serde_json", "dep:serde", "dep:serde_path_to_error"]
serde_yaml = ["dep:serde_yaml", "dep:serde", "dep:serde_path_to_error"]
serde_toml = ["dep:toml", "dep:serde", "dep:serde_path_to_error"]
http_types = ["dep:http"]

[dependencies]
aargvark_proc_macros = { path = "../aargvark_proc_macros", version = "=3.4.1" }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
serde_path_to_error = { version = "0.1", optional = true }
convert_case = "0.8"
comfy-table = { version = "7", features = ["custom_styling"] }
url = { version = "2", optional = true }
http = { version = "1", optional = true }
serde = { version = "1", optional = true }
console = "0.15"
textwrap = { version = "0.16", features = ["terminal_size"] }
unicode-width = "0.2"
shell-escape = "0.1"
