[package]
name = "aargvark_proc_macros"
description = "Helper crate for aargvark"
version = "3.3.1"
edition.workspace = true
license.workspace = true
repository = "https://github.com/andrewbaxter/genemichaels"
readme = "../../readme_aargvark.md"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6"
darling = "0.20"
flowcontrol = "0.2.3"
genemichaels-lib = { version = "=0.6.1", path = "../genemichaels-lib" }
proc-macro2 = "1"
quote = "1"
syn = "2"
