[package]
name = "aargvark_proc_macros"
description = "Helper crate for aargvark"
version = "3.5.1"
edition.workspace = true
license.workspace = true
repository = "https://github.com/andrewbaxter/genemichaels"
readme = "./readme.md"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.8"
darling = "0.20"
flowcontrol = "0.2.3"
genemichaels-lib = { version = "=0.8.1", path = "../genemichaels-lib" }
proc-macro2 = "1"
quote = "1"
syn = "2"

[lints.clippy]
all = "allow"
