[package]
name = "genemichaels-lib"
description = "Makes your code formatty, the library"
version = "0.7.6"
edition.workspace = true
license.workspace = true
repository = "https://github.com/andrewbaxter/genemichaels"
readme = "./readme.md"

[dependencies]
markdown = { version = "=1.0.0-alpha.21" }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { workspace = true }
cargo-manifest = "0.19"
derive_more = { version = "2", features = ["full"] }
loga = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1"

[dev-dependencies]
pretty_assertions = "1"
