[package]
name = "genemichaels"
description = "Makes your code formatty"
version = "0.8.0"
edition.workspace = true
license.workspace = true
repository = "https://github.com/andrewbaxter/genemichaels"
readme = "./readme.md"

[dependencies]
syn = { workspace = true }
walkdir = "2"
threadpool = "1"
cargo-manifest = "0.19"
aargvark = { version = "=0.8.1", path = "../aargvark" }
console = "0.15"
loga = "0.5"
serde = { workspace = true }
serde_json = { workspace = true }
genemichaels-lib = { version = "=0.7.1", path = "../genemichaels-lib" }
flowcontrol = "0.2"
dirs = "6"
